<resources>
    <string name="app_name">DominionCalculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="new_save">New</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="spear">Pikeman</string>
    <string name="archer">Archer</string>
    <string name="gnome">Dwarf</string>
    <string name="paladin">Paladin</string>
    <string name="arbalester">Arbalester</string>
    <string name="rider">Bear Rider</string>
    <string name="patriarch">Warden</string>
    <string name="ballista">Ballista</string>
    <string name="pathfinder">Pathfinder</string>
    <string name="huntress">Huntress</string>
    <string name="virsaav">Seeker</string>
    <string name="outlaw">Lost One</string>
    <string name="nomad">Nomad</string>
    <string name="knight">Knight</string>
    <string name="barbarian">Barbarian</string>
    <string name="grandlord">Great Lord</string>
    <string name="horsewoman">Reaver</string>
    <string name="reiter">Reiter</string>
    <string name="priestess">Priestess</string>
    <string name="golem">Golem</string>
    <string name="warlock">Warlock</string>
    <string name="daemon">Demon</string>
    <string name="necromancer">Necromancer</string>
    <string name="renegade">Renegade</string>
    <string name="spy">Silent One</string>
    <string name="griffin">Griffin</string>
    <string name="wyvern">Wyvern</string>
    <string name="dragon">Dragon</string>
    <string name="chimera">Chimera</string>
    <string name="succubus">Succubus</string>
    <string name="devourer">Undead Dragon</string>
    <string name="assassin">Assassin</string>
    <string name="hero">Hero</string>
    <string name="pegasus">Pegasus</string>
    <string name="nate">Niathi</string>
    <string name="elephant">Elephant</string>
    <string name="hydra">Hydra</string>
    <string name="gold">Gold</string>
    <string name="steel">Steel</string>
    <string name="meat">Meat</string>
    <string name="use_meat">Use meat in calculations</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ок</string>
    <string name="cancel">Cancel</string>
    <string name="important">Important</string>
    <string name="title_activity_main">Calculator</string>
    <string name="start_page">Start page</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="percent">Percent</string>
    <string name="percent_lable_dialog">Additional percent:</string>
    <string name="summ">Summ</string>
    <string name="not_exist">not exist</string>
    <string name="set">Set</string>
    <string name="trophy">Trophy</string>
    <string name="casualties">Casualties</string>
    <string name="previously">Previously</string>
    <string name="saving">Saving</string>
    <string name="save">Save</string>
    <string name="ac_info">Info</string>
    <string name="add_trophy_title">Add trophy</string>
    <string name="info_title">Account settings</string>
    <string name="add_to_summ">Add to summ</string>
    <string name="addUnits">Added</string>
    <string name="difUnits">Subtracted</string>
    <string name="history_lable">History:</string>
    <string name="add">Add</string>
    <string name="calc">Calculate</string>
    <string name="save_cancel">Saving canceled</string>
    <string name="load_acc_err">Error loading account</string>
    <string name="calc_loss">Calculation of casualties</string>
    <string name="dif_to_summ">Subtracted from the amount</string>
    <string name="and_additional_percent">and additional percent</string>
    <string name="preview_title">Preview</string>
    <string name="resource_balance">Resource balance:</string>
    <string name="press_once">Press once again to exit!</string>
</resources>
