<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trophy"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/trophy" />
        <item
            android:id="@+id/nav_casualties"
            android:icon="@drawable/ic_trending_down_black_24dp"
            android:title="@string/casualties" />
        <item
            android:id="@+id/nav_previously"
            android:icon="@drawable/ic_pageview_black_24dp"
            android:title="@string/previously" />
    </group>

    <item android:title="@string/saving">
        <menu>
            <item
                android:id="@+id/nav_save"
                android:title="@string/save" />
        </menu>
    </item>

</menu>
